<resources>
    <string name="app_name">Catdoption</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_hom">HomActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Cat List</string>
    <string name="title_add_cat">Add Cat</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="id_cat">ID</string>
    <string name="name_cat">Name: </string>
    <string name="age_cat">Age: </string>
    <string name="gender_cat">Gender: </string>
    <string name="breed_cat">Breed: </string>
    <string name="description_cat">Description</string>
    <string name="status_cat">Status: </string>
    <string name="adopt">Adopt</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Welcome to Catdoption</string>
    <string name="second_slide_title">Adopt a Cat</string>
    <string name="third_slide_title">Lifelong Friend</string>

    <!--Descriptions-->
    <string name="first_slide_desc">The cats we have here are rescue cats\nand all of them have been neutered/sterilized.</string>
    <string name="second_slide_desc">Every cat you adopt means a new\nfree space for us to rescue another one.</string>
    <string name="third_slide_desc">Your everyday life will never get boring\nwith these little furballs as your companion.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Count Mew In!</string>

</resources>