<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.cat.DetailCatActivity"
    android:background="@color/bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_detail_cat"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:src="@drawable/im_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_toRightOf="@id/img_detail_cat"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/name_detail_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="Nala"
                    android:textAlignment="center"
                    android:textColor="@color/pink_500"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age_cat"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/age_detail_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_detail_cat"
                        android:text="Adult"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_cat"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gender_detail_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_detail_cat"
                        android:text="Female"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_cat"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/breed_detail_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_detail_cat"
                        android:text="Turkish Angora"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_cat"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/status_detail_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_detail_cat"
                        android:text="Looking for new home"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_detail_cat"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/description_cat"
                    android:textColor="@color/pink_500"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/desc_detail_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="A really sweet cat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_adopt_cat"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/adopt"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:layout_margin="12dp"/>

                <Button
                    android:id="@+id/btn_delete_cat"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:layout_margin="12dp"/>

            </LinearLayout>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>